resolve to work with long titles on iphone 4

--- a/src/app/find/locationDetails/locationDetails.css
+++ b/src/app/find/locationDetails/locationDetails.css
@@ -21,7 +21,7 @@
 }
 
 .locationTitle {
-  width: 85%;
+  width: 75%;
   margin-left: auto;
   margin-right: auto;
   font-size: 17px;
